Add missed enum translate